Lade till email och stylesheet

--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Albins sida</title>
-    </head>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Albins sida</title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+</head>
     <body>
         <p>
             Albin
+        </p>
+        <p>
+            ahedenskog27@gmail.com
         </p>
     </body>
 </html>
