--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <h5 class="w3-opacity"><b><a href="https://github.com/NTIG-Uppsala/pizzeria-rafiki">Pizzeria project github repo</a></b></h5>
           <div class="w3-container">
-           <!-- <a href="https://ntig-uppsala.github.io/pizzeria-rafiki/" target="_blank" class="w3-button">
+            <a href="https://ntig-uppsala.github.io/pizzeria-rafiki/" target="_blank" class="w3-button">
                 <img src="pizzeria.png" alt="Pizzeria website project" class="w3-hover-opacity" style="width: 100%;">
                 <br>
                 Pizzeria website project
-            </a>-->
+            </a>
           </div>
           <h5 class="w3-opacity"><b><a href="https://github.com/NTIG-Uppsala/Frisor-Saxe"">Hairdresser former project github repo</a></b></h5>
           <div class="w3-container">
