Uppdated html after validation

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <title>Albin Hedenskog portfolio</title>
 <meta charset="UTF-8">
@@ -103,7 +103,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
                 Pizzeria website project
             </a>
           </div>
-          <h5 class="w3-opacity"><b><a href="https://github.com/NTIG-Uppsala/Frisor-Saxe"">Hairdresser former project github repo</a></b></h5>
+          <h5 class="w3-opacity"><b><a href="https://github.com/NTIG-Uppsala/Frisor-Saxe">Hairdresser former project github repo</a></b></h5>
           <div class="w3-container">
             <a href="https://ntig-uppsala.github.io/pizzeria-rafiki/" target="_blank" class="w3-button">
                 <img src="hairdresser.PNG" alt="Hairdresser website former unfinished project" class="w3-hover-opacity" style="width: 100%;">
@@ -111,7 +111,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
                 Hairdresser website former project
             </a>
           </div>
-            
+        </div>
         
       </div>
     <!-- End Right Column -->
