--- a/index.html
+++ b/index.html
@@ -95,12 +95,20 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <div class="w3-container w3-card w3-white">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Projects</h2>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b><a href="https://github.com/NTIG-Uppsala/pizzeria-rafiki">Pizzeria project github repo</a></b></h5>
+          <h5 class="w3-opacity"><b><a href="https://github.com/NTIG-Uppsala/pizzeria-rafiki">Car rental service project github repo</a></b></h5>
+          <div class="w3-container">
+            <a href="https://ntig-uppsala.github.io/Bengans-Biluthyrning/" target="_blank" class="w3-button">
+                <img src="images/car.PNG" alt="Pizzeria website project" class="w3-hover-opacity" style="width: 100%;">
+                <br>
+                Car rental service website project
+            </a>
+            </div>
+          <h5 class="w3-opacity"><b><a href="https://github.com/NTIG-Uppsala/pizzeria-rafiki">Pizzeria former project github repo</a></b></h5>
           <div class="w3-container">
             <a href="https://ntig-uppsala.github.io/pizzeria-rafiki/" target="_blank" class="w3-button">
                 <img src="images/pizzeria.PNG" alt="Pizzeria website project" class="w3-hover-opacity" style="width: 100%;">
                 <br>
-                Pizzeria website project
+                Pizzeria website former project
             </a>
           </div>
           <h5 class="w3-opacity"><b><a href="https://github.com/NTIG-Uppsala/Frisor-Saxe">Hairdresser former project github repo</a></b></h5>
